added some bullet points to the unordered list

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       <li>Git has a local branch which tracks a remote branch</li>
       <li>This is another bullet point</li>
       <li>And another one....</li>
+      <li>A new challenger has appeared!
+      <li>Our battle will be legendary!
     </ul>
   </body>
 </html>
